--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express-session": "^1.15.1",
     "history": "^4.6.3",
     "morgan": "^1.8.1",
+    "nodemailer": "^4.6.8",
     "npm-run-all": "^4.1.3",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
